force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Agreement_Template__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Template__c</fullName>
    <label>Agreement Template</label>
    <referenceTo>echosign_dev1__Agreement_Template__c</referenceTo>
    <relationshipName>Attachment_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>