force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Attachment_Document__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Attachment_Document__c</fullName>
    <label>Attachment Document ID&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>