force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Attachment_Document_Names__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Attachment_Document_Names__c</fullName>
    <label>Attachment Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>