force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Attachment_Selection_Field__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Attachment_Selection_Field__c</fullName>
    <label>Selection Determined By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Last Modified Date</fullName>
                <default>true</default>
                <label>Last Modified Date</label>
            </value>
            <value>
                <fullName>Created Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>