force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Attachment_Selection_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Attachment_Selection_Type__c</fullName>
    <label>File Selection from Master Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Latest Document</fullName>
                <default>true</default>
                <label>Latest Document</label>
            </value>
            <value>
                <fullName>Oldest Document</fullName>
            </value>
            <value>
                <fullName>All Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>