force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Master_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Master_Source_Type__c</fullName>
    <label>Attachment Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attachments</fullName>
            </value>
            <value>
                <fullName>Files</fullName>
                <default>true</default>
                <label>Files</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>