force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Quote_Selection_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Quote_Selection_Type__c</fullName>
    <label>Quote Selection from Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Latest Quote</fullName>
            </value>
            <value>
                <fullName>Oldest Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>