force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Related_Selection_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Related_Selection_Type__c</fullName>
    <label>Related Selection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Latest</fullName>
                <default>true</default>
                <label>Latest</label>
            </value>
            <value>
                <fullName>Oldest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>