force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document Builder Template</fullName>
            </value>
            <value>
                <fullName>Document from Content</fullName>
            </value>
            <value>
                <fullName>Document from EchoSign Library</fullName>
            </value>
            <value>
                <fullName>Document from Library</fullName>
                <default>true</default>
                <label>Document from Library</label>
            </value>
            <value>
                <fullName>Document from Master Object</fullName>
            </value>
            <value>
                <fullName>Quote Document from Master Quote</fullName>
            </value>
            <value>
                <fullName>Quote Document from Opportunity Quote</fullName>
            </value>
            <value>
                <fullName>Runtime Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>