force-app/main/default/objects/echosign_dev1__Attachment_Template__c/fields/echosign_dev1__Variable_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Variable_Name__c</fullName>
    <label>Variable Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>